--- a/app/src/main/res/layout/fragment_score_card.xml
+++ b/app/src/main/res/layout/fragment_score_card.xml
@@ -4,14 +4,15 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4bd4fd"
-    tools:context=".ScoreFragment">
+    tools:context=".ui.scorecard.ScoreCardFragment">
 
     <TextView
         android:id="@+id/tv_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center"
         android:text="0"
         android:textColor="@android:color/white"
         android:textSize="60dp" />
