--- a/app/src/main/res/layout/list_item_call_action.xml
+++ b/app/src/main/res/layout/list_item_call_action.xml
@@ -2,5 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/call_action"
     android:layout_width="match_parent"
-    android:padding="@dimen/fab_margin"
+    android:textColor="#222"
+    android:clickable="true"
+    android:paddingLeft="50dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:textSize="16dp"
+    android:paddingTop="@dimen/fab_margin"
+    android:paddingBottom="@dimen/fab_margin"
     android:layout_height="wrap_content" />
